resolvendo bugs nos links e fazendo deploy no netlify

--- a/pages/studentArea.html
+++ b/pages/studentArea.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/boletim-escolar/Images/icon-page.png" type="image/x-icon">
-    <link rel="stylesheet" href="/boletim-escolar/styles/dashboardPages.css">
+    <link rel="shortcut icon" href="../Images/icon-page.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/dashboardPages.css">
 </head>
 
 <body>
@@ -22,10 +22,10 @@
         </div>
         <div id="area-user">
             <h3 id="user-name"></h3>
-            <img src="/boletim-escolar/Images/exitIcon.png" id="exit">
+            <img src="../Images/exitIcon.png" id="exit">
         </div>
         <span class="message-exit">
-            <h5>Sair?</h5><img src="/boletim-escolar/Images/closeIcon.png">
+            <h5>Sair?</h5><img src="../Images/closeIcon.png">
         </span>
     </header>
 
@@ -73,7 +73,7 @@
     <div class="modal-content" id="modalMedia">
         <div class="btnModal" id="closeMedia">
             <span>
-                <img src="/boletim-escolar/Images/closeModal.png" alt="">
+                <img src="../Images/closeModal.png" alt="">
             </span>
         </div>
 
@@ -168,7 +168,7 @@
     <div class="modal-content" id="modalAbsences">
         <div class="btnModal" id="closeAbsences">
             <span>
-                <img src="/boletim-escolar/Images/closeModal.png" alt="">
+                <img src="../Images/closeModal.png" alt="">
             </span>
         </div>
             <div id="absences">
@@ -184,7 +184,7 @@
     <div class="modal-content" id="modalOccurrences">
         <div class="btnModal" id="closeOccurrences">
             <span>
-                <img src="/boletim-escolar/Images/closeModal.png" alt="">
+                <img src="../Images/closeModal.png" alt="">
             </span>
         </div>
         <div id="occurrences">
@@ -203,10 +203,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-auth.js"></script>
 
-    <script defer src="/boletim-escolar/js/globalJS/firebaseConfig.js"></script>
-    <script defer src="/boletim-escolar/js/globalJS/pageFeatures.js"></script>
-    <script defer src="/boletim-escolar/js/studentAreaJS/studentData.js"></script>
-    <script defer src="/boletim-escolar/js//studentAreaJS/studentArea.js"></script>
+    <script defer src="../js/globalJS/firebaseConfig.js"></script>
+    <script defer src="../js/globalJS/pageFeatures.js"></script>
+    <script defer src="../js/studentAreaJS/studentData.js"></script>
+    <script defer src="../js/studentAreaJS/studentArea.js"></script>
 
 
 
