--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/boletim-escolar/styles/index.css/">
+    <link rel="stylesheet" href="./styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/boletim-escolar/Images/icon-page.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Images/icon-page.png" type="image/x-icon">
     <title>Boletim Escolar</title>
 </head>
 
@@ -26,11 +26,11 @@
         <p id="cadastre">Aluno novo? <strong>Cadastre-se</strong></p>
     </main>
     <section id="img-background">
-        <img src="/boletim-escolar/Images/undraw_exams_g4ow.svg">
+        <img src="./Images/undraw_exams_g4ow.svg">
     </section>
 
     <section id="img-bg-register">
-        <img src="/boletim-escolar/Images/undraw_online_reading_np7n.svg">
+        <img src="./Images/undraw_online_reading_np7n.svg">
     </section>
 
     <div id="loginMsgError">
@@ -41,7 +41,7 @@
     <span class="registerArea">
 
         <h1>Cadastre-se</h1>
-        <form method="POST" >
+        <form method="POST">
             <input type="text" id="regNameInput" placeholder="Nome do aluno" minlength="2">
             <small id="regMessageName" class="msgError">Exemplo: "José Santos"</small>
 
@@ -64,10 +64,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-auth.js"></script>
-    <script defer src="/boletim-escolar/js/globalJS/firebaseConfig.js"></script>
-    <script defer src="/boletim-escolar/js/globalJS/loginAndRegister.js"></script>
+    <script defer src="./js/globalJS/firebaseConfig.js"></script>
+    <script defer src="./js/globalJS/loginAndRegister.js"></script>
 
-    
+
 
 
 </body>
